--- a/index.html
+++ b/index.html
@@ -18,64 +18,78 @@
       </div>
     </div>
     <!-- 운성 -->
-    <!-- 연희 -->
-    <div class="main">
-      <!-- 로고있는 곳 네모 -->
-      <div class="withoutwave">
-        <h1 class="bo5">B05</h1>
-      </div>
+      <!-- 연희 -->
+      <div class="main">
 
-      <button id="teamName" class="introbtn0" type="button">
-        우리 조의 이름은?
-      </button>
-      <button class="introbtn1" type="button">우리 조의 이름은?</button>
-      <button class="introbtn2" type="button">우리 조의 이름은?</button>
 
-      <!--물결-->
-      <div>
-        <svg
-          class="waves"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 24 150 28"
-          preserveAspectRatio="none"
-          shape-rendering="auto"
-        >
-          <defs>
-            <path
-              id="gentle-wave"
-              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
-            />
-          </defs>
-          <g class="parallax">
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="0"
-              fill="rgba(255,255,255,0.7"
-            />
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="3"
-              fill="rgba(255,255,255,0.5)"
-            />
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="5"
-              fill="rgba(255,255,255,0.3)"
-            />
-            <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-          </g>
-        </svg>
-      </div>
-      <!--물결 끝-->
+
+
+
+
+
+        <!-- 로고있는 곳 네모 -->
+        <div class="withoutwave">
+            <h1 class="ourgoal">"우린 해내죠"</h1>
+
+        </div>
+
+      
+
+        <!--물결-->
+        <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                    <path id="gentle-wave"
+                        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                </defs>
+                <g class="parallax">
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                    <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                </g>
+            </svg>
+        </div>
+        <!--물결 끝-->
+
+
+
     </div>
 
     <!--맨 밑-->
-    <div class="content flex">
-      <p>코딩쉽지않조 nevertheless</p>
+    <div class="ourname">
+        <div class="content flex">
+            <p>"코딩쉽지않조 nevertheless"
+            </p>
+        </div>
+    </div>
+
+
+
+    <div class="flex">
+        <div>
+            <div class="yhcard">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBmzocrJNdVO9aKdgIhUL8b-_xjEfi5-vvSSz6p4Pv6wN9nYnUZXZ4HxGWE3G3DwFTs9Y&usqp=CAU"
+                    class="card-img-top" alt="...">
+                <div class="yhc-body">
+                    <h5 class="yhc-title">Our Goal</h5>
+                    <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="yhcard">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh9RCRWmDc_sLZ7TirH-FtY98nE40K6M0dqA&s"
+                    class="card-img-top" alt="...">
+                <div class="yhc-body">
+                    <h5 class="yhc-title">Our Character</h5>
+                    <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- 연희 끝 -->
 
@@ -152,31 +166,31 @@
       <!-- sss -->
       <div id="firstMainCard" class="mainCard">
         <div class="mainCardImgBox">
-          <p class="mainProfileMbti">ENTP</p>
+          <p class="mainProfileMbti">INTJ</p>
           <div class="profileImageWrap">
             <img
-              src="./image/minyoung.png"
+              src="./image/evelynpoto.png"
               alt="mainCardImage"
               class="mainCardImg"
             />
           </div>
 
-          <p class="mainProfileName">Minyoung Kuk</p>
+          <p class="mainProfileName">Yeonhui Kim</p>
           <div class="mainCardsContact">
             <ul>
               <li>
                 <a href="mailto: uperxwall@gamil.com"
-                  >이메일: uperxwall@gamil.com</a
+                  >이메일: ygim3010@gamil.com</a
                 >
               </li>
               <li>
                 <a href="https://minyoungkuk.github.io/TIL/"
-                  >블로그: https://minyoungkuk.github.io/TIL/</a
+                  >블로그: 아직 없음</a
                 >
               </li>
               <li>
                 <a href="https://github.com/minyoungKuk"
-                  >깃헙브: https://github.com/minyoungKuk</a
+                  >깃헙브: https://github.com/evelyni22</a
                 >
               </li>
             </ul>
@@ -197,18 +211,18 @@
               <div>
                 <p class="title">저의 장점은요?</p>
                 <ul>
-                  <li>· 안되는게 어딨어요? 될때까지 합니다!</li>
-                  <li>· 퍼블리셔 경력!</li>
-                  <li>· 배려심!</li>
+                  <li>· 확실한 일처리?</li>
+                  <li>· 깔끔함?</li>
+                  <li>· 무엇보다 빛이나는 추진력!</li>
                 </ul>
               </div>
               <div>
                 <p class="title">저의 업무스타일이요?</p>
                 <ul>
-                  <li>· 협업에는 소통이 중요해요!</li>
-                  <li>· 맡은 작업은 끝까지 해내요!</li>
-                  <li>· 다른 팀원의 어려운 부분을 돕고 싶어요!</li>
-                  <li>· 저도 모르면 잘 물어봅니다!</li>
+                  <li>· 맡은 일은 책임지고 합니다!</li>
+                  <li>· 일을 찾아서 하는 능동적인 스타일!</li>
+                  <li>· 소통의 중요성을 알고 있어요</li>
+                  <li>· 정리와 메모를 습관적으로 합니다!</li>
                 </ul>
               </div>
             </div>
