--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </li>
               <li>
                 <a href="https://github.com/minyoungKuk"
-                  >깃헙브: https://github.com/minyoungKuk</a
+                  >깃허브: https://github.com/minyoungKuk</a
                 >
               </li>
             </ul>
@@ -198,7 +198,7 @@
               </li>
               <li>
                 <a href="https://github.com/minyoungKuk"
-                  >깃헙브: https://github.com/evelyni22</a
+                  >깃허브: https://github.com/evelyni22</a
                 >
               </li>
             </ul>
@@ -267,7 +267,7 @@
               </li>
               <li>
                 <a href="https://github.com/raccoonboy0803"
-                  >깃헙브:https://github.com/raccoonboy0803</a
+                  >깃허브:<br>https://github.com/raccoonboy0803</a
                 >
               </li>
             </ul>
@@ -313,72 +313,72 @@
         </div>
         <!--Heejin 끝-->
       </div>
-    </div>
-    <div id="firstMainCard" class="mainCard">
-      <div class="mainCardImgBox">
-        <p class="mainProfileMbti">INFP</p>
-        <div class="profileImageWrap">
-          <img
-            src="./image/yunseo.jpg"
-            alt="mainCardImage"
-            class="mainCardImg"
-          />
-        </div>
-
-        <p class="mainProfileName">Yunseo Kang</p>
-        <div class="mainCardsContact">
-          <ul>
-            <li>
-              <a href="mailto: poop6028@naver.com"
-                >이메일: poop6028@naver.com</a
-              >
-            </li>
-            <li>
-              <a href="https://dbsjt.tistory.com/"
-                >블로그: https://dbsjt.tistory.com/</a
-              >
-            </li>
-            <li>
-              <a href="https://github.com/dbsjt"
-                >깃헙브: https://github.com/dbsjt</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="mainCardsContents">
-        <div class="mainCardsContentsCon">
-          <!-- <p class="title" style="text-align: right"> -->
-          <!-- 팀 미니 프로젝트 - 코딩쉽지않조 -->
-          <img
-            src="https://ifh.cc/g/MtBP8X.png"
-            class="teamlogo"
-            alt="teamlogo"
-          />
-          <!-- </p> -->
-          <div class="mainCardsTxtBox">
-            <div>
-              <p class="title">저의 장점은요?</p>
-              <ul>
-                <li>· 임기응변이 좋습니다</li>
-                <li>· 적응이 빠릅니다</li>
-                <li>· 외국어를 잘합니다</li>
-              </ul>
-            </div>
-            <div>
-              <p class="title">저의 업무스타일이요?</p>
-              <ul>
-                <li>· 모르는게 있으면 항상 질문해요</li>
-                <li>· 맡은 부분은 책임지고 끝까지 해요</li>
-                <li>· 서로 존중하며 대화하며 풀어가요</li>
-              </ul>
-            </div>
+      <div id="firstMainCard" class="mainCard">
+        <div class="mainCardImgBox">
+          <p class="mainProfileMbti">INFP</p>
+          <div class="profileImageWrap">
+            <img
+              src="./image/yunseo.jpg"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+  
+          <p class="mainProfileName">Yunseo Kang</p>
+          <div class="mainCardsContact">
+            <ul>
+              <li>
+                <a href="mailto: poop6028@naver.com"
+                  >이메일: poop6028@naver.com</a
+                >
+              </li>
+              <li>
+                <a href="https://dbsjt.tistory.com/"
+                  >블로그: https://dbsjt.tistory.com/</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/dbsjt"
+                  >깃허브: https://github.com/dbsjt</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
-        <a class="btn default" href="./sparta/index.html">응원하기</a>
+  
+        <div class="mainCardsContents">
+          <div class="mainCardsContentsCon">
+            <!-- <p class="title" style="text-align: right"> -->
+            <!-- 팀 미니 프로젝트 - 코딩쉽지않조 -->
+            <img
+              src="https://ifh.cc/g/MtBP8X.png"
+              class="teamlogo"
+              alt="teamlogo"
+            />
+            <!-- </p> -->
+            <div class="mainCardsTxtBox">
+              <div>
+                <p class="title">저의 장점은요?</p>
+                <ul>
+                  <li>· 임기응변이 좋습니다</li>
+                  <li>· 적응이 빠릅니다</li>
+                  <li>· 외국어를 할줄압니다(베트남어,일본어)</li>
+                </ul>
+              </div>
+              <div>
+                <p class="title">저의 업무스타일이요?</p>
+                <ul>
+                  <li>· 모르는게 있으면 항상 질문해요</li>
+                  <li>· 맡은 부분은 책임지고 끝까지 해요</li>
+                  <li>· 서로 존중하며 대화하며 풀어가요</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <a class="btn default" href="./sparta/index.html">응원하기</a>
+        </div>
+        <!--카드섹션 끝-->
       </div>
-      <!--카드섹션 끝-->
     </div>
     <script src="./js/main.js"></script>
   </body>
