메인 화면 수정

--- a/index.html
+++ b/index.html
@@ -77,24 +77,27 @@
     <div class="flex">
 
         <div>
-            <div class="yhcard">
+            <div class="yhcard1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBmzocrJNdVO9aKdgIhUL8b-_xjEfi5-vvSSz6p4Pv6wN9nYnUZXZ4HxGWE3G3DwFTs9Y&usqp=CAU"
                     class="card-img-top1" alt="...">
                 <div class="yhc-body">
                     <h5 class="yhc-title">Our Goal</h5>
-                    <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <p class="yhc-text">우린 해내조!<br><br>
+                      지식 공유 & 스킬 개발 <br><br>
+                      오류없는 사이트 만들기
+                    </p>
                 </div>
             </div>
         </div>
         <div>
-            <div class="yhcard">
+            <div class="yhcard2">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh9RCRWmDc_sLZ7TirH-FtY98nE40K6M0dqA&s"
                     class="card-img-top2" alt="...">
                 <div class="yhc-body">
                     <h5 class="yhc-title">Our Character</h5>
-                    <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <p class="yhc-text">외향적인 리더가 이끄는 조용하지만 할건 하는 팀<br><br>
+                      다양한 배경과 관점을 가진 팀원들의 창의적인 아이디어<br><br>
+                      결과물을 지속적으로 공유하며 더 좋은 페이지를 위해 고민</p>
                 </div>
             </div>
         </div>
@@ -267,7 +270,7 @@
               </li>
               <li>
                 <a href="https://github.com/raccoonboy0803"
-                  >깃허브:<br>https://github.com/raccoonboy0803</a
+                  >깃허브:https://github.com/raccoonboy0803</a
                 >
               </li>
             </ul>
@@ -375,7 +378,19 @@
               </div>
             </div>
           </div>
+          <div>
+            <div class="mainCardsTxtBox">
+              <div>
+                <p class="title">저의 장점은요?</p>
+                <ul>
+                  <li>· 임기응변이 좋습니다</li>
+                  <li>· 적응이 빠릅니다</li>
+                  <li>· 외국어를 할줄압니다(베트남어,일본어)</li>
+                </ul>
+              </div>
+              <div>
           <a class="btn default" href="./sparta/index.html">응원하기</a>
+        </div>
         </div>
         <!--카드섹션 끝-->
       </div>
