--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBmzocrJNdVO9aKdgIhUL8b-_xjEfi5-vvSSz6p4Pv6wN9nYnUZXZ4HxGWE3G3DwFTs9Y&usqp=CAU"
                     class="card-img-top1" alt="...">
                 <div class="yhc-body">
-                    <h5 class="yhc-title">Our Goal</h5>
+                    <h2 class="yhc-title">Our Goal🎈</h2>
                     <p class="yhc-text">우린 해내조!<br><br>
                       지식 공유 & 스킬 개발 <br><br>
                       오류없는 사이트 만들기
@@ -94,7 +94,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh9RCRWmDc_sLZ7TirH-FtY98nE40K6M0dqA&s"
                     class="card-img-top2" alt="...">
                 <div class="yhc-body">
-                    <h5 class="yhc-title">Our Character</h5>
+                    <h2 class="yhc-title">Our Character✨</h2>
                     <p class="yhc-text">외향적인 리더가 이끄는 조용하지만 할건 하는 팀<br><br>
                       다양한 배경과 관점을 가진 팀원들의 창의적인 아이디어<br><br>
                       결과물을 지속적으로 공유하며 더 좋은 페이지를 위해 고민</p>
@@ -123,17 +123,17 @@
             <ul>
               <li>
                 <a href="mailto: uperxwall@gamil.com"
-                  >이메일: uperxwall@gamil.com</a
+                  >✉️: uperxwall@gamil.com</a
                 >
               </li>
               <li>
                 <a href="https://minyoungkuk.github.io/TIL/"
-                  >블로그: https://minyoungkuk.github.io/TIL/</a
+                  >🌐: https://minyoungkuk.github.io/TIL/</a
                 >
               </li>
               <li>
                 <a href="https://github.com/minyoungKuk"
-                  >깃허브: https://github.com/minyoungKuk</a
+                  >🐈‍⬛: https://github.com/minyoungKuk</a
                 >
               </li>
             </ul>
@@ -191,17 +191,17 @@
             <ul>
               <li>
                 <a href="mailto: uperxwall@gamil.com"
-                  >이메일: ygim3010@gamil.com</a
+                  >✉️: ygim3010@gamil.com</a
                 >
               </li>
               <li>
                 <a href="https://minyoungkuk.github.io/TIL/"
-                  >블로그: 아직 없음</a
+                  >🌐: 아직 없음</a
                 >
               </li>
               <li>
                 <a href="https://github.com/minyoungKuk"
-                  >깃허브: https://github.com/evelyni22</a
+                  >🐈‍⬛: https://github.com/evelyni22</a
                 >
               </li>
             </ul>
@@ -260,17 +260,17 @@
             <ul>
               <li>
                 <a href="mailto: raccoonboy0803@gmail.com"
-                  >이메일: raccoonboy0803@gmail.com</a
+                  >✉️: raccoonboy0803@gmail.com</a
                 >
               </li>
               <li>
                 <a href="https://raccoonboy0803.tistory.com/"
-                  >블로그: https://raccoonboy0803.tistory.com/</a
+                  >🌐: https://raccoonboy0803.tistory.com/</a
                 >
               </li>
               <li>
                 <a href="https://github.com/raccoonboy0803"
-                  >깃허브:https://github.com/raccoonboy0803</a
+                  >🐈‍⬛:https://github.com/raccoonboy0803</a
                 >
               </li>
             </ul>
@@ -332,17 +332,17 @@
             <ul>
               <li>
                 <a href="mailto: poop6028@naver.com"
-                  >이메일: poop6028@naver.com</a
+                  >✉️: poop6028@naver.com</a
                 >
               </li>
               <li>
                 <a href="https://dbsjt.tistory.com/"
-                  >블로그: https://dbsjt.tistory.com/</a
+                  >🌐: https://dbsjt.tistory.com/</a
                 >
               </li>
               <li>
                 <a href="https://github.com/dbsjt"
-                  >깃허브: https://github.com/dbsjt</a
+                  >🐈‍⬛: https://github.com/dbsjt</a
                 >
               </li>
             </ul>
@@ -378,19 +378,7 @@
               </div>
             </div>
           </div>
-          <div>
-            <div class="mainCardsTxtBox">
-              <div>
-                <p class="title">저의 장점은요?</p>
-                <ul>
-                  <li>· 임기응변이 좋습니다</li>
-                  <li>· 적응이 빠릅니다</li>
-                  <li>· 외국어를 할줄압니다(베트남어,일본어)</li>
-                </ul>
-              </div>
-              <div>
           <a class="btn default" href="./sparta/index.html">응원하기</a>
-        </div>
         </div>
         <!--카드섹션 끝-->
       </div>
