현우 카드 추가

--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
         </div>
         <!--Heejin 끝-->
       </div>
+
       <div id="firstMainCard" class="mainCard">
         <div class="mainCardImgBox">
           <p class="mainProfileMbti">INFP</p>
@@ -326,14 +327,12 @@
               class="mainCardImg"
             />
           </div>
-  
+
           <p class="mainProfileName">Yunseo Kang</p>
           <div class="mainCardsContact">
             <ul>
               <li>
-                <a href="mailto: poop6028@naver.com"
-                  >✉️: poop6028@naver.com</a
-                >
+                <a href="mailto: poop6028@naver.com">✉️: poop6028@naver.com</a>
               </li>
               <li>
                 <a href="https://dbsjt.tistory.com/"
@@ -348,7 +347,7 @@
             </ul>
           </div>
         </div>
-  
+
         <div class="mainCardsContents">
           <div class="mainCardsContentsCon">
             <!-- <p class="title" style="text-align: right"> -->
@@ -382,6 +381,72 @@
         </div>
         <!--카드섹션 끝-->
       </div>
+      <!-- hyunwoo -->
+      <div id="firstMainCard" class="mainCard">
+        <div class="mainCardImgBox">
+          <p class="mainProfileMbti">INFP</p>
+          <div class="profileImageWrap">
+            <img
+              src="./image/hyunwoo.png"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+  
+          <p class="mainProfileName">Hyunwoo Jung</p>
+          <div class="mainCardsContact">
+            <ul>
+              <li>
+                <a href="mailto: jungilbung@naver.com"
+                  >✉️: jungilbung@naver.com</a
+                >
+              </li>
+              <li>
+                <a href="https://velog.io/@jim9649/posts"
+                  >🌐: https://velog.io/@jim9649/posts</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/junghyunwoo02"
+                  >🐈‍⬛: https://github.com/junghyunwoo02</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+  
+        <div class="mainCardsContents">
+          <div class="mainCardsContentsCon">
+            <!-- <p class="title" style="text-align: right"> -->
+            <!-- 팀 미니 프로젝트 - 코딩쉽지않조 -->
+            <img
+              src="https://ifh.cc/g/MtBP8X.png"
+              class="teamlogo"
+              alt="teamlogo"
+            />
+            <!-- </p> -->
+            <div class="mainCardsTxtBox">
+              <div>
+                <p class="title">저의 장점은요?</p>
+                <ul>
+                  <li>· 꼼꼼합니다</li>
+                  <li>· 깊은 인내심을 가지고 있어요!</li>
+                  <li>· 용기를 잘 냅니다!</li>
+                </ul>
+              </div>
+              <div>
+                <p class="title">저의 업무스타일이요?</p>
+                <ul>
+                  <li>· 맡은 일들을 철저하게 처리하고 세부 사항에 주의를 기울여요</li>
+                  <li>· 새로운 관점에서 접근하고 새로운 아이디어를 시도해보는 것을 즐겨요!</li>
+                  <li>· 팀 내에서의 조화와 협업을 추구합니다. 다른 이들의 의견을 경청하고 함께 문제를 해결하려고 노력해요!</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <a class="btn default" href="./sparta/index.html">응원하기</a>
+        </div>
+        <!--카드섹션 끝-->
     </div>
     <script src="./js/main.js"></script>
   </body>
