--- a/guestbook/guest.html
+++ b/guestbook/guest.html
@@ -30,6 +30,9 @@
         />
       </div>
     </div>
+
+
+
     <hr class="hr" width="90%" color="lightgray" />
 
    
@@ -46,6 +49,34 @@
                 >
             </div>
         </div>
+
+        <div class="mypostbox" id="postingbox">
+
+          <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="image" placeholder="name@example.com">
+              <label for="floatingInput">앨범 이미지</label>
+          </div>
+  
+          <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="title" placeholder="name@example.com">
+              <label for="floatingInput">앨범 제목</label>
+          </div>
+  
+          <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="date" placeholder="name@example.com">
+              <label for="floatingInput">앨범 날짜</label>
+          </div>
+  
+          <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a comment here" id="comment"></textarea>
+              <label for="floatingTextarea">앨범 내용</label>
+          </div>
+  
+          <div class="mybtn">
+              <button id="postingbtn" type="button" class="btn btn-primary">기록하기</button>
+              <button type="button" class="btn btn-outline-outline-primary">닫기</button>
+          </div>
+      </div>
   
             
         </div>
