--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <!--카드섹션 끝-->
         </div>
         <!-- 운성 -->
-        <div id="firstMainCard" class="mainCard">
+        <div id="firstMainCard" class="mainCard last-card">
             <div class="mainCardImgBox">
                 <p class="mainProfileMbti">ISFP</p>
                 <div class="profileImageWrap">
