--- a/guestbook/guest.html
+++ b/guestbook/guest.html
@@ -11,8 +11,8 @@
     <div class="header">
       <div class="logo"></div>
       <div class="menu">
-        <span class="title" onclick="scrollToTop()">코딩 쉽지 않조!</span>
-        <a onclick="scrollToElement('#teamName')">팀 소개</a>
+        <a class="title" href="../index.html">코딩 쉽지 않조!</a>
+        <a href="../index.html">팀 소개</a>
         <a onclick="scrollToElement('#firstMainCard', 'start')">팀원 소개</a>
       </div>
     </div>
